# Mahakala-agent-upgrade

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  admin_clean.ps1  build.rs  check_disk.ps1  check_files.py  check_final.ps1  check_residual.ps1  clean_residual.ps1  clean_temp.ps1  find_residual.ps1  mahakala.db  mahakala_icon.py  open_folder.py  run_admin.bat  show_b64.py  spec.md  tasks.md  test_api.ps1  test_chat.ps1  test_report.md  梵文阿_logo.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
resources/: icon.rc
src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs
src/agent/: core.rs  mod.rs  prompt_builder.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/browser/: mod.rs
src/cli/: mod.rs
src/community_skills/: mod.rs
src/cron/: mod.rs
src/delegation/: mod.rs
src/fts_search/: mod.rs
src/gateway/: mod.rs
src/gateways/: mod.rs
src/honcho/: mod.rs
src/i18n/: mod.rs
src/image/: mod.rs
src/learning/: mod.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/memory_prompt/: mod.rs
src/multiagent/: mod.rs
src/plugins/: mod.rs
src/rbac/: mod.rs
src/rl_environment/: mod.rs
src/semantic_memory/: mod.rs
src/serverless/: mod.rs
src/skills/: mod.rs
src/state/: mod.rs  sync.rs
src/terminal/: mod.rs
src/tools/: all_tools.rs  calculator.rs  date.rs  env_tool.rs  file_delete.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  http_tool.rs  json_tool.rs  memory_tool.rs  mod.rs  registry.rs  shell_exec.rs  text_tool.rs  todo.rs  web_fetch.rs
src/trajectory/: mod.rs
src/upload/: mod.rs
src/voice/: mod.rs
src/web_server/: mod.rs
src/wechat/: mod.rs
src/workspace/: mod.rs
webui/: index.html
webui/js/: main.js
webui/styles/: main.css
