[package]
name = "mahakala-agent-upgrade"
version = "1.0.0"
edition = "2021"
description = "Mahakala Agent - AI Agent with WebUI (Rust Implementation)"
license = "MIT"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 命令行
clap = { version = "4", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 认证
jsonwebtoken = "10"
argon2 = "0.5"
rand = "0.8"

# 定时任务
tokio-cron-scheduler = "0.9"

# 数据库
rusqlite = { version = "0.30", features = ["bundled"] }

# 工具
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
mime_guess = "2"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
thiserror = "1"
anyhow = "1"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
glob = "0.3"

# 嵌入资源
rust-embed = { version = "8", features = ["axum", "interpolate-folder-path"] }
include_dir = "0.7"

# 国际化
fluent = "0.16"
fluent-bundle = "0.15"

# 模板
askama = "0.12"

# 计算器
evalexpr = "13"

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# 二维码生成
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
